--- a/.gitignore
+++ b/.gitignore
@@ -128,13 +128,15 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
 .venv
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
+
+# Por enquanto
+# .env
 
 # Spyder project settings
 .spyderproject
