--- a/postgres/.env
+++ b/postgres/.env
@@ -1,5 +1,5 @@
 # docker exec -it postgres-container psql -U user -d postgres-database
 
-POSTGRES_USER=user
-POSTGRES_PASSWORD=password
-POSTGRES_DB=postgres-database
+POSTGRES_DB=biometrics_db
+POSTGRES_USER=server
+POSTGRES_PASSWORD=123456
